Bug 277420. Use ConstructBlock when creating scrolled and absolutely positioned blocks. Removes copied code and makes columns work in such situations. r+sr=bzbarsky